--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,37 +7,23 @@
 </head>
 <body>
 
+   <h1>Homepage</h1>
 
-   <address>
-      <p><span class="address-span">Autor</span>: Nils Ramstöck</p>
-      <p><span class="address-span">Mail</span>: <a class="underline" href="mailto:inf3622@hs-worms.com">inf3622@hs-worms.de</a></p>
-      <p><span class="address-span">Adresse</span>: <a class="underline" href="https://www.nasram.net">www.nasram.net</a></p>
-   </address>
+   <h2>Meine 'erste' Webseite</h2>
+   <p>
+      Definitiv meine erste Webseite. Garantiert. <a href="/firstpage.html">Schau mal</a>
+   </p>
 
-   <hr>
+   <h2>Mein Stundenplan</h2>
+   <p>
+      Hier mein Stundenplan. Hat die besten Stunden, alle super geplant. Kein Stundenplan ist besser als dieser.
+      <a href="/schedule.html">Stundenplan</a>
+   </p>
 
-
-   <section>
-      <h1>Zitat:</h1>
-
-      <blockquote>
-         Three times did the cheese move sideways to Switzerland by radio, but she never licked that parking permit. - Darwin Watterson
-      </blockquote>
-
-      <h1>Formel:</h1>
-
-      <p>E=MC<sup>2</sup></p>
-   </section>
-
-   <section>
-
-      <h1>Weiteres:</h1>
-
-      <p>
-         Weil macht spaß und so. Weitere Sätze stehen hier:
-         <br>
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-   </section>
+   <h2>Mein Traumurlaub</h2>
+   <p>
+      Da würd ich gern mal hin.
+      <a href="/vacation.html">Urlaub</a>
+   </p>
 </body>
 </html>
